Refactor code to improve readability and maintainability: use final modifiers and simplify variable declarations